# BUS

./: .gitignore  Array.idr  BUS.cabal  BUSTest.hs  Bus.idr  Bus.ipkg  Dan.idr  Expr.idr  Folds.idr  Language.idr  Lists.idr  Math.idr  README.org  Scheme.idr  Sexpr.idr  String.idr  Tests.idr  bus.cabal  pack.toml  run.sh
paper/: Obj.idr  paper.bib  paper.tex
src/: Array.hs  BUS.hs  Language.hs  Math.hs
src/BUS/: Language.hs
src/BUS/Language/: Array.hs  Math.hs  String.hs
