cabal-version:      2.4
name:               BUS
version:            0.1.0.0

synopsis: BUS: A simple bottom-up synthesizer

author:             Raffi Sanna
maintainer:         rsanna@g.harvard.edu

library
    exposed-modules:  BUS, BUS.Language,
                      BUS.Language.Math, BUS.Language.Array, BUS.Language.String

    build-depends:    base ^>=4.16.4.0,
                      containers >= 0.6.5.1,
                      prettyprinter >= 1.7.1,
                      text >= 1.2.5.0,
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings, LambdaCase
    ghc-options:      "-W -Wincomplete-uni-patterns"

test-suite bus-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    -- hs-source-dirs:
    main-is:          BUSTest.hs
    build-depends:    base ^>=4.16.4.0,
                      BUS >= 0.1.0.0, 
                      containers >= 0.6.5.1,
                      prettyprinter >= 1.7.1,
                      HUnit >= 1.6.2.0
