cabal-version:      2.4
name:               bus
version:            0.1.0.0

synopsis: BUS: A simple bottom-up synthesizer

author:             Raffi Sanna
maintainer:         rsanna@g.harvard.edu

library
    exposed-modules:  BUS, Math, Array, Language

    other-extensions: LambdaCase, TypeFamilies
    build-depends:    base ^>=4.16.4.0,
                      containers >= 0.6.5.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite bus-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    -- hs-source-dirs:
    main-is:          BUSTest.hs
    build-depends:    base ^>=4.16.4.0,
                      bus >= 0.1.0.0, 
                      containers >= 0.6.5.1,
                      HUnit >= 1.6.2.0
